changing hosting site & added idea page

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             <div class="content">
               <img class="scene scene--full" src="https://images.pexels.com/photos/998641/pexels-photo-998641.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" id="scene"></img>
               <div class="content__inner">
-                <h2 class="content__title">JEDI E-CELL</h2>
+                <h2 class="content__title">JEDI CELL</h2>
                 <h3 class="content__subtitle">
                   Jaya Entrepreneurship and Development of Innovation cell
                 </h3>
@@ -113,6 +113,11 @@
                         <i class="fas fa-home"></i></span></a>
                   </li>
                   <!-- <li><a href="">TEAM<span class="side-span" ><i class="fas fa-users"></i></span> </a></li> -->
+                  <li>
+                    <a href="src/pioneerdom.html"
+                      >PIONEERDOM<span class="side-span"
+                        ><i class="fas fa-lightbulb"></i></span></a>
+                  </li>
                   <li>
                     <a href="#event-section"
                       >EVENTS<span class="side-span"
@@ -157,6 +162,7 @@
           </div>
         </div>
       </section>
+  
 
       <!-- event section  -->
 
